docs: the 0.12 documentation says what the code does, and says when it was checked
The release gate refuses a changed document without frontmatter, and the milestone changed 53 of
them. Filling that in mechanically was the wrong move: `docs-style-guide.md` defines
`last-verified` as "the date a human last confirmed this page matches the code", the checker tests
only that the key is present, and a bulk pass stamping today's date would have gone green while
being false on every file. So the pages were read against the code first. The date is the
by-product.

That turned out to be the right order, because the documentation had drifted further than the
missing metadata suggested. 24 living documents — the twelve subsystem pages, three guides, the
architecture narrative, the matrices, the testkit and deployment pages — took **156 corrections**.
Every factual sentence left standing was then put to an adversary reading the code: of **644
claims judged, 37 did not survive**, and the adversary found **29 more false sentences the audit
had not thought to flag**. Sixty-five repairs followed.

What the corrections look like, rather than how many there were:

- `crypto.md` carried two code samples calling a `CryptoException` that exists nowhere in the tree,
  a `TlsHandshakeEvent` field named `durationMs` where the record declares `durationNanos`, a JFR
  event name given as a class name where `@Name` says `eu.exeris.kernel.core.crypto.ContextAlloc`,
  a `NativeCipherContext` lifecycle attributed to `LoanedBuffer.retain()` when the class runs its
  own CAS refcount, and "1000 `wrap()` calls" for a TCK that runs 1,000 warmup and 10,000 measured.
- `security.md` said a failed security context terminates the virtual thread. One virtual thread
  serves a whole keep-alive connection; the request is dropped and the loop continues.
- `security.md` also said `EX-SEC-2003` gives operators uniform telemetry across both role paths.
  `SecurityJfrEvents.emitInsufficientPrivileges` has one c